# absorb

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  banners.rs  config.rs  display.rs  main.rs
src/display/: footer.rs  help.rs  mod.rs  text_view.rs  word.rs
