[package]
name = "absorb"
version = "0.1.4"
edition = "2024"
description = "A cli tool to absorb text quickly"
license = "MIT"
repository = "https://github.com/kloki/absorb"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
futures = "0.3"
tui-big-text = "0.8"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"

[profile.dist]
inherits = "release"
lto = "thin"
